sjengida/c1/calc_attackers
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/calc_attackers/src/attacks.c:511:6: error: use of undeclared identifier 'setup_attackers_rook_o'
v8 = setup_attackers_rook_o[v2]; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/calc_attackers/src/attacks.c:531:7: error: use of undeclared identifier 'setup_attackers_bishop_o'
v20 = setup_attackers_bishop_o[v19]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/calc_attackers/src/attacks.c:554:56: error: use of undeclared identifier 'jpt_401814'
result += board[square + ( __int64)*( int *)( ( char *)jpt_401814 + v25)] == 3; 
                                                       ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/calc_attackers/src/attacks.c:563:6: error: use of undeclared identifier 'setup_attackers_rook_o'
v4 = setup_attackers_rook_o[v2]; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/calc_attackers/src/attacks.c:583:7: error: use of undeclared identifier 'setup_attackers_bishop_o'
v13 = setup_attackers_bishop_o[v12]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/calc_attackers/src/attacks.c:606:56: error: use of undeclared identifier 'jpt_401814'
result += board[square + ( __int64)*( int *)( ( char *)jpt_401814 + v18)] == 4; 
                                                       ^
6 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/calc_attackers/src/obj/attacks.o] Error 1
